load("@bazeldnf//:deps.bzl", "rpmtree")
load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
    "container_push",
)
load(
    "@io_bazel_rules_docker//docker/util:run.bzl",
    "container_run_and_extract",
)

container_push(
    name = "push-forklift-virt-v2v-warm",
    format = "Docker",
    image = ":forklift-virt-v2v-warm",
    registry = "$${REGISTRY:-quay.io}",
    repository = "$${REGISTRY_ORG:-}$${REGISTRY_ORG:+/}forklift-virt-v2v-warm",
    tag = "$${REGISTRY_TAG:-devel}",
)

# Appliance build
# NOTE: We deliberately do not use (and cannot use) rpmtree to build a base
# layer with packages. Supermin queries the RPM database to track package files
# and dependencies. Tar constructed by rpmtree is just a bunch of files and it
# does not preserve the RPM database info. Therefore we imitate a Dockerfile
# build here.
container_run_and_extract(
    name = "appliance",
    commands = [
        "set -x",
        "sed -i 's|^#baseurl=http://mirror.centos.org/\\(.*\\)$|baseurl=http://vault.centos.org/\001|' /etc/yum.repos.d/*",
        "dnf -y update",
        "dnf -y install libguestfs-devel libguestfs-appliance libguestfs-xfs libguestfs-winsupport supermin",
        "depmod \\$(ls /lib/modules/ |tail -n1)",
        "export LIBGUESTFS_BACKEND=direct",
        "export LIBGUESTFS_DEBUG=1 LIBGUESTFS_TRACE=1",
        "mkdir -p /usr/lib64/guestfs/appliance",
        "cd /usr/lib64/guestfs/appliance",
        "libguestfs-make-fixed-appliance --xz",
        "cp /usr/lib64/guestfs/appliance/appliance-*.tar.xz /libguestfs-appliance.tar.xz",
    ],
    extract_file = "/libguestfs-appliance.tar.xz",
    image = "@centos-stream-8//image",
)

container_image(
    name = "appliance-image",
    base = "@ubi8-minimal//image",
    directory = "/usr/lib64/guestfs",
    files = [":appliance/libguestfs-appliance.tar.xz"],
)

container_image(
    name = "virt-v2v-image",
    base = "appliance-image",
    directory = "/",
    tars = [":virt-v2v"],
)

container_image(
    name = "forklift-virt-v2v-warm",
    base = ":virt-v2v-image",
    directory = "/usr/local/bin/",
    empty_dirs = ["/disks"],
    entrypoint = ["/usr/local/bin/entrypoint"],
    env = {"LIBGUESTFS_BACKEND": "direct"},
    files = ["entrypoint"],
    user = "1001",
    visibility = ["//visibility:public"],
)

rpmtree(
    name = "virt-v2v",
    rpms = [
        "@acl-0__2.2.53-3.el8.x86_64//rpm",
        "@alsa-lib-0__1.2.10-2.el8.x86_64//rpm",
        "@audit-libs-0__3.1.2-1.el8.x86_64//rpm",
        "@augeas-libs-0__1.12.0-8.el8.x86_64//rpm",
        "@autogen-libopts-0__5.18.12-8.el8.x86_64//rpm",
        "@basesystem-0__11-5.el8.x86_64//rpm",
        "@bash-0__4.4.20-5.el8.x86_64//rpm",
        "@bitmap-console-fonts-0__0.3-28.el8.x86_64//rpm",
        "@boost-atomic-0__1.66.0-13.el8.x86_64//rpm",
        "@boost-chrono-0__1.66.0-13.el8.x86_64//rpm",
        "@boost-date-time-0__1.66.0-13.el8.x86_64//rpm",
        "@boost-iostreams-0__1.66.0-13.el8.x86_64//rpm",
        "@boost-program-options-0__1.66.0-13.el8.x86_64//rpm",
        "@boost-random-0__1.66.0-13.el8.x86_64//rpm",
        "@boost-regex-0__1.66.0-13.el8.x86_64//rpm",
        "@boost-system-0__1.66.0-13.el8.x86_64//rpm",
        "@boost-thread-0__1.66.0-13.el8.x86_64//rpm",
        "@bzip2-0__1.0.6-26.el8.x86_64//rpm",
        "@bzip2-libs-0__1.0.6-26.el8.x86_64//rpm",
        "@ca-certificates-0__2023.2.60_v7.0.306-80.0.el8.x86_64//rpm",
        "@cairo-0__1.15.12-6.el8.x86_64//rpm",
        "@celt051-0__0.5.1.3-15.el8.x86_64//rpm",
        "@centos-gpg-keys-1__8-6.el8.x86_64//rpm",
        "@centos-stream-release-0__8.6-1.el8.x86_64//rpm",
        "@centos-stream-repos-0__8-6.el8.x86_64//rpm",
        "@checkpolicy-0__2.9-1.el8.x86_64//rpm",
        "@chkconfig-0__1.19.2-1.el8.x86_64//rpm",
        "@coreutils-single-0__8.30-15.el8.x86_64//rpm",
        "@cpio-0__2.12-11.el8.x86_64//rpm",
        "@cracklib-0__2.9.6-15.el8.x86_64//rpm",
        "@cracklib-dicts-0__2.9.6-15.el8.x86_64//rpm",
        "@crypto-policies-0__20230731-1.git3177e06.el8.x86_64//rpm",
        "@crypto-policies-scripts-0__20230731-1.git3177e06.el8.x86_64//rpm",
        "@cryptsetup-libs-0__2.3.7-7.el8.x86_64//rpm",
        "@curl-0__7.61.1-34.el8.x86_64//rpm",
        "@cyrus-sasl-0__2.1.27-6.el8_5.x86_64//rpm",
        "@cyrus-sasl-gssapi-0__2.1.27-6.el8_5.x86_64//rpm",
        "@cyrus-sasl-lib-0__2.1.27-6.el8_5.x86_64//rpm",
        "@daxctl-libs-0__71.1-7.el8.x86_64//rpm",
        "@dbus-1__1.12.8-26.el8.x86_64//rpm",
        "@dbus-common-1__1.12.8-26.el8.x86_64//rpm",
        "@dbus-daemon-1__1.12.8-26.el8.x86_64//rpm",
        "@dbus-libs-1__1.12.8-26.el8.x86_64//rpm",
        "@dbus-tools-1__1.12.8-26.el8.x86_64//rpm",
        "@device-mapper-8__1.02.181-14.el8.x86_64//rpm",
        "@device-mapper-event-8__1.02.181-14.el8.x86_64//rpm",
        "@device-mapper-event-libs-8__1.02.181-14.el8.x86_64//rpm",
        "@device-mapper-libs-8__1.02.181-14.el8.x86_64//rpm",
        "@device-mapper-multipath-libs-0__0.8.4-41.el8.x86_64//rpm",
        "@device-mapper-persistent-data-0__0.9.0-7.el8.x86_64//rpm",
        "@diffutils-0__3.6-6.el8.x86_64//rpm",
        "@dmidecode-1__3.3-4.el8.x86_64//rpm",
        "@dnsmasq-0__2.79-33.el8.x86_64//rpm",
        "@dracut-0__049-233.git20240115.el8.x86_64//rpm",
        "@e2fsprogs-libs-0__1.45.6-5.el8.x86_64//rpm",
        "@edk2-ovmf-0__20220126gitbb1bba3d77-13.el8.x86_64//rpm",
        "@elfutils-default-yama-scope-0__0.190-2.el8.x86_64//rpm",
        "@elfutils-libelf-0__0.190-2.el8.x86_64//rpm",
        "@elfutils-libs-0__0.190-2.el8.x86_64//rpm",
        "@expat-0__2.2.5-13.el8.x86_64//rpm",
        "@file-0__5.33-26.el8.x86_64//rpm",
        "@file-libs-0__5.33-26.el8.x86_64//rpm",
        "@filesystem-0__3.8-6.el8.x86_64//rpm",
        "@findutils-1__4.6.0-22.el8.x86_64//rpm",
        "@fontconfig-0__2.13.1-4.el8.x86_64//rpm",
        "@fontpackages-filesystem-0__1.44-22.el8.x86_64//rpm",
        "@freetype-0__2.9.1-9.el8.x86_64//rpm",
        "@fribidi-0__1.0.4-9.el8.x86_64//rpm",
        "@fuse-0__2.9.7-19.el8.x86_64//rpm",
        "@fuse-common-0__3.3.0-19.el8.x86_64//rpm",
        "@fuse-libs-0__2.9.7-19.el8.x86_64//rpm",
        "@gawk-0__4.2.1-4.el8.x86_64//rpm",
        "@gdbm-1__1.18-2.el8.x86_64//rpm",
        "@gdbm-libs-1__1.18-2.el8.x86_64//rpm",
        "@gettext-0__0.19.8.1-17.el8.x86_64//rpm",
        "@gettext-libs-0__0.19.8.1-17.el8.x86_64//rpm",
        "@glib-networking-0__2.56.1-1.1.el8.x86_64//rpm",
        "@glib2-0__2.56.4-163.el8.x86_64//rpm",
        "@glibc-0__2.28-251.el8.2.x86_64//rpm",
        "@glibc-common-0__2.28-251.el8.2.x86_64//rpm",
        "@glibc-langpack-en-0__2.28-251.el8.2.x86_64//rpm",
        "@glusterfs-0__6.0-56.4.el8.x86_64//rpm",
        "@glusterfs-api-0__6.0-56.4.el8.x86_64//rpm",
        "@glusterfs-cli-0__6.0-56.4.el8.x86_64//rpm",
        "@glusterfs-client-xlators-0__6.0-56.4.el8.x86_64//rpm",
        "@glusterfs-libs-0__6.0-56.4.el8.x86_64//rpm",
        "@gmp-1__6.1.2-12.el8.x86_64//rpm",
        "@gnupg2-0__2.2.20-3.el8.x86_64//rpm",
        "@gnutls-0__3.6.16-8.el8.1.x86_64//rpm",
        "@gnutls-dane-0__3.6.16-8.el8.1.x86_64//rpm",
        "@gnutls-utils-0__3.6.16-8.el8.1.x86_64//rpm",
        "@graphite2-0__1.3.10-10.el8.x86_64//rpm",
        "@grep-0__3.1-6.el8.x86_64//rpm",
        "@groff-base-0__1.22.3-18.el8.x86_64//rpm",
        "@gsettings-desktop-schemas-0__3.32.0-6.el8.x86_64//rpm",
        "@gssproxy-0__0.8.0-21.el8.x86_64//rpm",
        "@gstreamer1-0__1.16.1-2.el8.x86_64//rpm",
        "@gstreamer1-plugins-base-0__1.16.1-3.el8.x86_64//rpm",
        "@gzip-0__1.9-13.el8.x86_64//rpm",
        "@harfbuzz-0__1.7.5-4.el8.x86_64//rpm",
        "@hexedit-0__1.2.13-12.el8.x86_64//rpm",
        "@hivex-0__1.3.18-23.module_el8__plus__310__plus__72016cce.x86_64//rpm",
        "@hwdata-0__0.314-8.22.el8.x86_64//rpm",
        "@info-0__6.5-7.el8_5.x86_64//rpm",
        "@iproute-0__6.2.0-5.el8.x86_64//rpm",
        "@iproute-tc-0__6.2.0-5.el8.x86_64//rpm",
        "@iptables-0__1.8.5-11.el8.x86_64//rpm",
        "@iptables-ebtables-0__1.8.5-11.el8.x86_64//rpm",
        "@iptables-libs-0__1.8.5-11.el8.x86_64//rpm",
        "@ipxe-roms-qemu-0__20181214-11.git133f4c47.el8.x86_64//rpm",
        "@iscsi-initiator-utils-0__6.2.1.4-8.git095f59c.el8.x86_64//rpm",
        "@iscsi-initiator-utils-iscsiuio-0__6.2.1.4-8.git095f59c.el8.x86_64//rpm",
        "@isns-utils-libs-0__0.99-1.el8.x86_64//rpm",
        "@iso-codes-0__3.79-2.el8.x86_64//rpm",
        "@jansson-0__2.14-1.el8.x86_64//rpm",
        "@json-c-0__0.13.1-3.el8.x86_64//rpm",
        "@json-glib-0__1.4.4-1.el8.x86_64//rpm",
        "@kernel-core-0__4.18.0-553.6.1.el8.x86_64//rpm",
        "@keyutils-0__1.5.10-9.el8.x86_64//rpm",
        "@keyutils-libs-0__1.5.10-9.el8.x86_64//rpm",
        "@kmod-0__25-20.el8.x86_64//rpm",
        "@kmod-libs-0__25-20.el8.x86_64//rpm",
        "@krb5-libs-0__1.18.2-27.el8.x86_64//rpm",
        "@less-0__530-3.el8.x86_64//rpm",
        "@libX11-0__1.6.8-8.el8.x86_64//rpm",
        "@libX11-common-0__1.6.8-8.el8.x86_64//rpm",
        "@libX11-xcb-0__1.6.8-8.el8.x86_64//rpm",
        "@libXau-0__1.0.9-3.el8.x86_64//rpm",
        "@libXext-0__1.3.4-1.el8.x86_64//rpm",
        "@libXfixes-0__5.0.3-7.el8.x86_64//rpm",
        "@libXft-0__2.3.3-1.el8.x86_64//rpm",
        "@libXrender-0__0.9.10-7.el8.x86_64//rpm",
        "@libXv-0__1.0.11-7.el8.x86_64//rpm",
        "@libXxf86vm-0__1.1.4-9.el8.x86_64//rpm",
        "@libacl-0__2.2.53-3.el8.x86_64//rpm",
        "@libaio-0__0.3.112-1.el8.x86_64//rpm",
        "@libarchive-0__3.3.3-5.el8.x86_64//rpm",
        "@libassuan-0__2.5.1-3.el8.x86_64//rpm",
        "@libattr-0__2.4.48-3.el8.x86_64//rpm",
        "@libbasicobjects-0__0.1.1-40.el8.x86_64//rpm",
        "@libblkid-0__2.32.1-46.el8.x86_64//rpm",
        "@libbpf-0__0.5.0-1.el8.x86_64//rpm",
        "@libcap-0__2.48-5.el8.x86_64//rpm",
        "@libcap-ng-0__0.7.11-1.el8.x86_64//rpm",
        "@libcollection-0__0.7.0-40.el8.x86_64//rpm",
        "@libcom_err-0__1.45.6-5.el8.x86_64//rpm",
        "@libconfig-0__1.5-9.el8.x86_64//rpm",
        "@libcroco-0__0.6.12-4.el8_2.1.x86_64//rpm",
        "@libcurl-minimal-0__7.61.1-34.el8.x86_64//rpm",
        "@libdatrie-0__0.2.9-7.el8.x86_64//rpm",
        "@libdb-0__5.3.28-42.el8_4.x86_64//rpm",
        "@libdb-utils-0__5.3.28-42.el8_4.x86_64//rpm",
        "@libdrm-0__2.4.115-2.el8.x86_64//rpm",
        "@libepoxy-0__1.5.8-1.el8.x86_64//rpm",
        "@libev-0__4.24-6.el8.x86_64//rpm",
        "@libevent-0__2.1.8-5.el8.x86_64//rpm",
        "@libfdisk-0__2.32.1-46.el8.x86_64//rpm",
        "@libfdt-0__1.6.0-1.el8.x86_64//rpm",
        "@libffi-0__3.1-24.el8.x86_64//rpm",
        "@libgcc-0__8.5.0-22.el8.x86_64//rpm",
        "@libgcrypt-0__1.8.5-7.el8.x86_64//rpm",
        "@libglvnd-1__1.3.4-2.el8.x86_64//rpm",
        "@libglvnd-egl-1__1.3.4-2.el8.x86_64//rpm",
        "@libglvnd-gles-1__1.3.4-2.el8.x86_64//rpm",
        "@libglvnd-glx-1__1.3.4-2.el8.x86_64//rpm",
        "@libgomp-0__8.5.0-22.el8.x86_64//rpm",
        "@libgpg-error-0__1.31-1.el8.x86_64//rpm",
        "@libguestfs-1__1.44.0-9.module_el8__plus__310__plus__72016cce.x86_64//rpm",
        "@libguestfs-tools-c-1__1.44.0-9.module_el8__plus__310__plus__72016cce.x86_64//rpm",
        "@libguestfs-winsupport-0__8.10-1.module_el8__plus__674__plus__a2e292c7.x86_64//rpm",
        "@libibverbs-0__48.0-1.el8.x86_64//rpm",
        "@libicu-0__60.3-2.el8_1.x86_64//rpm",
        "@libidn2-0__2.2.0-1.el8.x86_64//rpm",
        "@libini_config-0__1.3.1-40.el8.x86_64//rpm",
        "@libiscsi-0__1.18.0-8.module_el8__plus__310__plus__72016cce.x86_64//rpm",
        "@libjpeg-turbo-0__1.5.3-12.el8.x86_64//rpm",
        "@libkcapi-0__1.4.0-2.el8.x86_64//rpm",
        "@libkcapi-hmaccalc-0__1.4.0-2.el8.x86_64//rpm",
        "@libksba-0__1.3.5-9.el8.x86_64//rpm",
        "@libmnl-0__1.0.4-6.el8.x86_64//rpm",
        "@libmodman-0__2.0.1-17.el8.x86_64//rpm",
        "@libmount-0__2.32.1-46.el8.x86_64//rpm",
        "@libnetfilter_conntrack-0__1.0.6-5.el8.x86_64//rpm",
        "@libnfnetlink-0__1.0.1-13.el8.x86_64//rpm",
        "@libnfsidmap-1__2.3.3-59.el8.x86_64//rpm",
        "@libnftnl-0__1.2.2-3.el8.x86_64//rpm",
        "@libnghttp2-0__1.33.0-6.el8.1.x86_64//rpm",
        "@libnl3-0__3.7.0-1.el8.x86_64//rpm",
        "@libnsl2-0__1.2.0-2.20180605git4a062cf.el8.x86_64//rpm",
        "@libogg-2__1.3.2-10.el8.x86_64//rpm",
        "@libosinfo-0__1.9.0-3.el8.x86_64//rpm",
        "@libpath_utils-0__0.2.1-40.el8.x86_64//rpm",
        "@libpcap-14__1.9.1-5.el8.x86_64//rpm",
        "@libpciaccess-0__0.14-1.el8.x86_64//rpm",
        "@libpipeline-0__1.5.0-2.el8.x86_64//rpm",
        "@libpmem-0__1.12.1-1.module_el8.8.0__plus__1231__plus__994ef5f7.x86_64//rpm",
        "@libpng-2__1.6.34-5.el8.x86_64//rpm",
        "@libproxy-0__0.4.15-5.2.el8.x86_64//rpm",
        "@libpwquality-0__1.4.4-6.el8.x86_64//rpm",
        "@librados2-1__12.2.7-9.el8.x86_64//rpm",
        "@librbd1-1__12.2.7-9.el8.x86_64//rpm",
        "@librdmacm-0__48.0-1.el8.x86_64//rpm",
        "@libref_array-0__0.1.5-40.el8.x86_64//rpm",
        "@libseccomp-0__2.5.2-1.el8.x86_64//rpm",
        "@libselinux-0__2.9-8.el8.x86_64//rpm",
        "@libselinux-utils-0__2.9-8.el8.x86_64//rpm",
        "@libsemanage-0__2.9-9.el8.x86_64//rpm",
        "@libsepol-0__2.9-3.el8.x86_64//rpm",
        "@libsigsegv-0__2.11-5.el8.x86_64//rpm",
        "@libsmartcols-0__2.32.1-46.el8.x86_64//rpm",
        "@libsoup-0__2.62.3-5.el8.x86_64//rpm",
        "@libssh-0__0.9.6-14.el8.x86_64//rpm",
        "@libssh-config-0__0.9.6-14.el8.x86_64//rpm",
        "@libstdc__plus____plus__-0__8.5.0-22.el8.x86_64//rpm",
        "@libtasn1-0__4.13-4.el8.x86_64//rpm",
        "@libthai-0__0.1.27-2.el8.x86_64//rpm",
        "@libtheora-1__1.1.1-21.el8.x86_64//rpm",
        "@libtirpc-0__1.1.4-12.el8.x86_64//rpm",
        "@libtpms-0__0.9.1-2.20211126git1ff6fe1f43.module_el8__plus__310__plus__72016cce.x86_64//rpm",
        "@libunistring-0__0.9.9-3.el8.x86_64//rpm",
        "@libusbx-0__1.0.23-4.el8.x86_64//rpm",
        "@libutempter-0__1.1.6-14.el8.x86_64//rpm",
        "@libuuid-0__2.32.1-46.el8.x86_64//rpm",
        "@libverto-0__0.3.2-2.el8.x86_64//rpm",
        "@libverto-libev-0__0.3.2-2.el8.x86_64//rpm",
        "@libvirt-daemon-0__8.0.0-23.1.module_el8__plus__1010__plus__06b1482b.x86_64//rpm",
        "@libvirt-daemon-driver-interface-0__8.0.0-23.1.module_el8__plus__1010__plus__06b1482b.x86_64//rpm",
        "@libvirt-daemon-driver-network-0__8.0.0-23.1.module_el8__plus__1010__plus__06b1482b.x86_64//rpm",
        "@libvirt-daemon-driver-nodedev-0__8.0.0-23.1.module_el8__plus__1010__plus__06b1482b.x86_64//rpm",
        "@libvirt-daemon-driver-nwfilter-0__8.0.0-23.1.module_el8__plus__1010__plus__06b1482b.x86_64//rpm",
        "@libvirt-daemon-driver-qemu-0__8.0.0-23.1.module_el8__plus__1010__plus__06b1482b.x86_64//rpm",
        "@libvirt-daemon-driver-secret-0__8.0.0-23.1.module_el8__plus__1010__plus__06b1482b.x86_64//rpm",
        "@libvirt-daemon-driver-storage-0__8.0.0-23.1.module_el8__plus__1010__plus__06b1482b.x86_64//rpm",
        "@libvirt-daemon-driver-storage-core-0__8.0.0-23.1.module_el8__plus__1010__plus__06b1482b.x86_64//rpm",
        "@libvirt-daemon-driver-storage-disk-0__8.0.0-23.1.module_el8__plus__1010__plus__06b1482b.x86_64//rpm",
        "@libvirt-daemon-driver-storage-gluster-0__8.0.0-23.1.module_el8__plus__1010__plus__06b1482b.x86_64//rpm",
        "@libvirt-daemon-driver-storage-iscsi-0__8.0.0-23.1.module_el8__plus__1010__plus__06b1482b.x86_64//rpm",
        "@libvirt-daemon-driver-storage-iscsi-direct-0__8.0.0-23.1.module_el8__plus__1010__plus__06b1482b.x86_64//rpm",
        "@libvirt-daemon-driver-storage-logical-0__8.0.0-23.1.module_el8__plus__1010__plus__06b1482b.x86_64//rpm",
        "@libvirt-daemon-driver-storage-mpath-0__8.0.0-23.1.module_el8__plus__1010__plus__06b1482b.x86_64//rpm",
        "@libvirt-daemon-driver-storage-rbd-0__8.0.0-23.1.module_el8__plus__1010__plus__06b1482b.x86_64//rpm",
        "@libvirt-daemon-driver-storage-scsi-0__8.0.0-23.1.module_el8__plus__1010__plus__06b1482b.x86_64//rpm",
        "@libvirt-daemon-kvm-0__8.0.0-23.1.module_el8__plus__1010__plus__06b1482b.x86_64//rpm",
        "@libvirt-libs-0__8.0.0-23.1.module_el8__plus__1010__plus__06b1482b.x86_64//rpm",
        "@libvisual-1__0.4.0-25.el8.x86_64//rpm",
        "@libvorbis-1__1.3.6-2.el8.x86_64//rpm",
        "@libwayland-client-0__1.21.0-1.el8.x86_64//rpm",
        "@libwayland-cursor-0__1.21.0-1.el8.x86_64//rpm",
        "@libwayland-egl-0__1.21.0-1.el8.x86_64//rpm",
        "@libwayland-server-0__1.21.0-1.el8.x86_64//rpm",
        "@libxcb-0__1.13.1-1.el8.x86_64//rpm",
        "@libxcrypt-0__4.1.1-6.el8.x86_64//rpm",
        "@libxkbcommon-0__0.9.1-1.el8.x86_64//rpm",
        "@libxml2-0__2.9.7-18.el8.x86_64//rpm",
        "@libxshmfence-0__1.3-2.el8.x86_64//rpm",
        "@libxslt-0__1.1.32-6.el8.x86_64//rpm",
        "@libyaml-0__0.1.7-5.el8.x86_64//rpm",
        "@libzstd-0__1.4.4-1.el8.x86_64//rpm",
        "@linux-firmware-0__20240111-121.gitb3132c18.el8.x86_64//rpm",
        "@llvm-compat-libs-0__16.0.6-4.module_el8__plus__729__plus__5bfd1bbd.x86_64//rpm",
        "@llvm-libs-0__17.0.6-2.module_el8__plus__895__plus__5524c78c.x86_64//rpm",
        "@lua-libs-0__5.3.4-12.el8.x86_64//rpm",
        "@lvm2-8__2.03.14-14.el8.x86_64//rpm",
        "@lvm2-libs-8__2.03.14-14.el8.x86_64//rpm",
        "@lz4-libs-0__1.8.3-3.el8_4.x86_64//rpm",
        "@lzo-0__2.08-14.el8.x86_64//rpm",
        "@lzop-0__1.03-20.el8.x86_64//rpm",
        "@man-db-0__2.7.6.1-18.el8.x86_64//rpm",
        "@mdevctl-0__1.1.0-2.el8.x86_64//rpm",
        "@mesa-dri-drivers-0__23.1.4-2.el8.x86_64//rpm",
        "@mesa-filesystem-0__23.1.4-2.el8.x86_64//rpm",
        "@mesa-libEGL-0__23.1.4-2.el8.x86_64//rpm",
        "@mesa-libGL-0__23.1.4-2.el8.x86_64//rpm",
        "@mesa-libgbm-0__23.1.4-2.el8.x86_64//rpm",
        "@mesa-libglapi-0__23.1.4-2.el8.x86_64//rpm",
        "@mozjs60-0__60.9.0-4.el8.x86_64//rpm",
        "@mpfr-0__3.1.6-1.el8.x86_64//rpm",
        "@nbdkit-0__1.24.0-5.module_el8__plus__310__plus__72016cce.x86_64//rpm",
        "@nbdkit-basic-filters-0__1.24.0-5.module_el8__plus__310__plus__72016cce.x86_64//rpm",
        "@nbdkit-basic-plugins-0__1.24.0-5.module_el8__plus__310__plus__72016cce.x86_64//rpm",
        "@nbdkit-curl-plugin-0__1.24.0-5.module_el8__plus__310__plus__72016cce.x86_64//rpm",
        "@nbdkit-python-plugin-0__1.24.0-5.module_el8__plus__310__plus__72016cce.x86_64//rpm",
        "@nbdkit-server-0__1.24.0-5.module_el8__plus__310__plus__72016cce.x86_64//rpm",
        "@nbdkit-ssh-plugin-0__1.24.0-5.module_el8__plus__310__plus__72016cce.x86_64//rpm",
        "@nbdkit-vddk-plugin-0__1.24.0-5.module_el8__plus__310__plus__72016cce.x86_64//rpm",
        "@ncurses-base-0__6.1-10.20180224.el8.x86_64//rpm",
        "@ncurses-libs-0__6.1-10.20180224.el8.x86_64//rpm",
        "@ndctl-libs-0__71.1-7.el8.x86_64//rpm",
        "@netcf-libs-0__0.2.8-12.module_el8__plus__310__plus__72016cce.x86_64//rpm",
        "@nettle-0__3.4.1-7.el8.x86_64//rpm",
        "@nfs-utils-1__2.3.3-59.el8.x86_64//rpm",
        "@npth-0__1.5-4.el8.x86_64//rpm",
        "@nspr-0__4.35.0-1.el8.x86_64//rpm",
        "@nss-0__3.90.0-7.el8.x86_64//rpm",
        "@nss-softokn-0__3.90.0-7.el8.x86_64//rpm",
        "@nss-softokn-freebl-0__3.90.0-7.el8.x86_64//rpm",
        "@nss-sysinit-0__3.90.0-7.el8.x86_64//rpm",
        "@nss-util-0__3.90.0-7.el8.x86_64//rpm",
        "@numactl-libs-0__2.0.16-4.el8.x86_64//rpm",
        "@numad-0__0.5-27.20150602git.el8.x86_64//rpm",
        "@openldap-0__2.4.46-18.el8.x86_64//rpm",
        "@openssl-libs-1__1.1.1k-12.el8.x86_64//rpm",
        "@opus-0__1.3-0.4.beta.el8.x86_64//rpm",
        "@orc-0__0.4.28-3.el8.x86_64//rpm",
        "@osinfo-db-0__20231215-1.el8.x86_64//rpm",
        "@osinfo-db-tools-0__1.9.0-1.el8.x86_64//rpm",
        "@p11-kit-0__0.23.22-2.el8.x86_64//rpm",
        "@p11-kit-trust-0__0.23.22-2.el8.x86_64//rpm",
        "@pam-0__1.3.1-33.el8.x86_64//rpm",
        "@pango-0__1.42.4-8.el8.x86_64//rpm",
        "@parted-0__3.2-39.el8.x86_64//rpm",
        "@pcre-0__8.42-6.el8.x86_64//rpm",
        "@pcre2-0__10.32-3.el8.x86_64//rpm",
        "@pixman-0__0.38.4-4.el8.x86_64//rpm",
        "@platform-python-0__3.6.8-62.el8.x86_64//rpm",
        "@platform-python-setuptools-0__39.2.0-7.el8.x86_64//rpm",
        "@policycoreutils-0__2.9-26.el8.x86_64//rpm",
        "@policycoreutils-python-utils-0__2.9-26.el8.x86_64//rpm",
        "@polkit-0__0.115-15.el8.x86_64//rpm",
        "@polkit-libs-0__0.115-15.el8.x86_64//rpm",
        "@polkit-pkla-compat-0__0.1-12.el8.x86_64//rpm",
        "@popt-0__1.18-1.el8.x86_64//rpm",
        "@procps-ng-0__3.3.15-14.el8.x86_64//rpm",
        "@psmisc-0__23.1-5.el8.x86_64//rpm",
        "@python3-audit-0__3.1.2-1.el8.x86_64//rpm",
        "@python3-libs-0__3.6.8-62.el8.x86_64//rpm",
        "@python3-libselinux-0__2.9-8.el8.x86_64//rpm",
        "@python3-libsemanage-0__2.9-9.el8.x86_64//rpm",
        "@python3-pip-wheel-0__9.0.3-24.el8.x86_64//rpm",
        "@python3-policycoreutils-0__2.9-26.el8.x86_64//rpm",
        "@python3-pyyaml-0__3.12-12.el8.x86_64//rpm",
        "@python3-setools-0__4.3.0-5.el8.x86_64//rpm",
        "@python3-setuptools-wheel-0__39.2.0-7.el8.x86_64//rpm",
        "@qemu-img-15__6.2.0-49.module_el8__plus__991__plus__097e156d.x86_64//rpm",
        "@qemu-kvm-15__6.2.0-49.module_el8__plus__991__plus__097e156d.x86_64//rpm",
        "@qemu-kvm-block-curl-15__6.2.0-49.module_el8__plus__991__plus__097e156d.x86_64//rpm",
        "@qemu-kvm-block-gluster-15__6.2.0-49.module_el8__plus__991__plus__097e156d.x86_64//rpm",
        "@qemu-kvm-block-iscsi-15__6.2.0-49.module_el8__plus__991__plus__097e156d.x86_64//rpm",
        "@qemu-kvm-block-rbd-15__6.2.0-49.module_el8__plus__991__plus__097e156d.x86_64//rpm",
        "@qemu-kvm-block-ssh-15__6.2.0-49.module_el8__plus__991__plus__097e156d.x86_64//rpm",
        "@qemu-kvm-common-15__6.2.0-49.module_el8__plus__991__plus__097e156d.x86_64//rpm",
        "@qemu-kvm-core-15__6.2.0-49.module_el8__plus__991__plus__097e156d.x86_64//rpm",
        "@qemu-kvm-docs-15__6.2.0-49.module_el8__plus__991__plus__097e156d.x86_64//rpm",
        "@qemu-kvm-hw-usbredir-15__6.2.0-49.module_el8__plus__991__plus__097e156d.x86_64//rpm",
        "@qemu-kvm-ui-opengl-15__6.2.0-49.module_el8__plus__991__plus__097e156d.x86_64//rpm",
        "@qemu-kvm-ui-spice-15__6.2.0-49.module_el8__plus__991__plus__097e156d.x86_64//rpm",
        "@quota-1__4.04-14.el8.x86_64//rpm",
        "@quota-nls-1__4.04-14.el8.x86_64//rpm",
        "@readline-0__7.0-10.el8.x86_64//rpm",
        "@rpcbind-0__1.2.5-10.el8.x86_64//rpm",
        "@rpm-0__4.14.3-31.el8.x86_64//rpm",
        "@rpm-libs-0__4.14.3-31.el8.x86_64//rpm",
        "@rpm-plugin-selinux-0__4.14.3-31.el8.x86_64//rpm",
        "@seabios-bin-0__1.16.0-4.module_el8__plus__603__plus__e0ca2c01.x86_64//rpm",
        "@seavgabios-bin-0__1.16.0-4.module_el8__plus__603__plus__e0ca2c01.x86_64//rpm",
        "@sed-0__4.5-5.el8.x86_64//rpm",
        "@selinux-policy-0__3.14.3-139.el8.x86_64//rpm",
        "@selinux-policy-targeted-0__3.14.3-139.el8.x86_64//rpm",
        "@setup-0__2.12.2-11.el8.x86_64//rpm",
        "@sgabios-bin-1__0.20170427git-3.module_el8__plus__310__plus__72016cce.x86_64//rpm",
        "@shadow-utils-2__4.6-22.el8.x86_64//rpm",
        "@snappy-0__1.1.8-3.el8.x86_64//rpm",
        "@spice-server-0__0.14.3-4.el8.x86_64//rpm",
        "@sqlite-libs-0__3.26.0-19.el8.x86_64//rpm",
        "@swtpm-0__0.7.0-4.20211109gitb79fd91.module_el8__plus__310__plus__72016cce.x86_64//rpm",
        "@swtpm-libs-0__0.7.0-4.20211109gitb79fd91.module_el8__plus__310__plus__72016cce.x86_64//rpm",
        "@swtpm-tools-0__0.7.0-4.20211109gitb79fd91.module_el8__plus__310__plus__72016cce.x86_64//rpm",
        "@systemd-0__239-82.el8.1.x86_64//rpm",
        "@systemd-container-0__239-82.el8.1.x86_64//rpm",
        "@systemd-libs-0__239-82.el8.1.x86_64//rpm",
        "@systemd-pam-0__239-82.el8.1.x86_64//rpm",
        "@systemd-udev-0__239-82.el8.1.x86_64//rpm",
        "@tar-2__1.30-9.el8.x86_64//rpm",
        "@tzdata-0__2024a-1.el8.x86_64//rpm",
        "@unbound-libs-0__1.16.2-5.el8.x86_64//rpm",
        "@unzip-0__6.0-46.el8.x86_64//rpm",
        "@usbredir-0__0.12.0-4.el8.x86_64//rpm",
        "@userspace-rcu-0__0.10.1-4.el8.x86_64//rpm",
        "@util-linux-0__2.32.1-46.el8.x86_64//rpm",
        "@vim-minimal-2__8.0.1763-19.el8.4.x86_64//rpm",
        "@virt-v2v-1__1.42.0-22.module_el8__plus__310__plus__72016cce.x86_64//rpm",
        "@virtio-win-0__1.9.24-2.el8_5.x86_64//rpm",
        "@which-0__2.21-20.el8.x86_64//rpm",
        "@xkeyboard-config-0__2.28-1.el8.x86_64//rpm",
        "@xml-common-0__0.6.3-50.el8.x86_64//rpm",
        "@xz-0__5.2.4-4.el8.x86_64//rpm",
        "@xz-libs-0__5.2.4-4.el8.x86_64//rpm",
        "@yajl-0__2.1.0-12.el8.x86_64//rpm",
        "@zlib-0__1.2.11-25.el8.x86_64//rpm",
    ],
    visibility = ["//visibility:public"],
)
