load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "base",
    srcs = ["controller.go"],
    importpath = "github.com/konveyor/forklift-controller/pkg/controller/base",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/controller/provider/web",
        "//vendor/github.com/konveyor/controller/pkg/condition",
        "//vendor/github.com/konveyor/controller/pkg/logging",
        "//vendor/k8s.io/api/core/v1:core",
        "//vendor/k8s.io/apimachinery/pkg/api/errors",
        "//vendor/k8s.io/apimachinery/pkg/runtime",
        "//vendor/k8s.io/client-go/tools/record",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/client",
    ],
)
