load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "host",
    srcs = [
        "controller.go",
        "predicate.go",
        "validation.go",
    ],
    importpath = "github.com/konveyor/forklift-controller/pkg/controller/host",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/forklift/v1beta1",
        "//pkg/controller/base",
        "//pkg/controller/host/handler",
        "//pkg/controller/plan/adapter/vsphere",
        "//pkg/controller/provider/web",
        "//pkg/controller/provider/web/vsphere",
        "//pkg/controller/validation",
        "//pkg/settings",
        "//vendor/github.com/konveyor/controller/pkg/condition",
        "//vendor/github.com/konveyor/controller/pkg/error",
        "//vendor/github.com/konveyor/controller/pkg/logging",
        "//vendor/github.com/konveyor/controller/pkg/ref",
        "//vendor/k8s.io/api/core/v1:core",
        "//vendor/k8s.io/apimachinery/pkg/api/errors",
        "//vendor/k8s.io/apiserver/pkg/storage/names",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/client",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/controller",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/event",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/handler",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/manager",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/predicate",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/reconcile",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/source",
    ],
)
